force-app/main/default/objects/CustomerSets__x/CustomerSets__x.object-meta.xml
<CustomObject>
    <description>CustomerSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>CustomerSets</externalName>
    <label>CustomerSets</label>
    <pluralLabel>CustomerSets</pluralLabel>
</CustomObject>