force-app/main/default/objects/CustomerSets__x/fields/CustName1__c.field-meta.xml
<CustomField>
    <fullName>CustName1__c</fullName>
    <description>CustName1</description>
    <externalDeveloperName>CustName1</externalDeveloperName>
    <label>CustName1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>