force-app/main/default/objects/CustomerSets__x/fields/CustName2__c.field-meta.xml
<CustomField>
    <fullName>CustName2__c</fullName>
    <description>CustName2</description>
    <externalDeveloperName>CustName2</externalDeveloperName>
    <label>CustName2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>