force-app/main/default/objects/CustomerSets__x/fields/CustNumber__c.field-meta.xml
<CustomField>
    <fullName>CustNumber__c</fullName>
    <description>CustNumber</description>
    <externalDeveloperName>CustNumber</externalDeveloperName>
    <label>CustNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>