force-app/main/default/objects/CustomerSets__x/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>CustomerType</description>
    <externalDeveloperName>CustomerType</externalDeveloperName>
    <label>CustomerType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>