force-app/main/default/objects/CustomerSets__x/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Key</description>
    <externalDeveloperName>Key</externalDeveloperName>
    <label>Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>