force-app/main/default/objects/CustomerSets__x/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <description>MobileNumber</description>
    <externalDeveloperName>MobileNumber</externalDeveloperName>
    <label>MobileNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>