force-app/main/default/objects/CustomerSets__x/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>ObjectName</description>
    <externalDeveloperName>ObjectName</externalDeveloperName>
    <label>ObjectName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>