force-app/main/default/objects/CustomerSets__x/fields/Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Postalcode__c</fullName>
    <description>Postalcode</description>
    <externalDeveloperName>Postalcode</externalDeveloperName>
    <label>Postalcode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>