force-app/main/default/objects/CustomerSets__x/fields/Previouseaccno__c.field-meta.xml
<CustomField>
    <fullName>Previouseaccno__c</fullName>
    <description>Previouseaccno</description>
    <externalDeveloperName>Previouseaccno</externalDeveloperName>
    <label>Previouseaccno</label>
    <length>128</length>
    <type>Text</type>
</CustomField>