force-app/main/default/objects/CustomerSets__x/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region</description>
    <externalDeveloperName>Region</externalDeveloperName>
    <label>Region</label>
    <length>128</length>
    <type>Text</type>
</CustomField>