force-app/main/default/objects/CustomerSets__x/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>SourceSystem</description>
    <externalDeveloperName>SourceSystem</externalDeveloperName>
    <label>SourceSystem</label>
    <length>128</length>
    <type>Text</type>
</CustomField>