force-app/main/default/objects/CustomerSets__x/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <description>Street1</description>
    <externalDeveloperName>Street1</externalDeveloperName>
    <label>Street1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>