force-app/main/default/objects/CustomerSets__x/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <description>Street2</description>
    <externalDeveloperName>Street2</externalDeveloperName>
    <label>Street2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>