force-app/main/default/objects/CustomerSets__x/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <description>Telephone</description>
    <externalDeveloperName>Telephone</externalDeveloperName>
    <label>Telephone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>